Fix vertical alignment of blips in index and work detail page

--- a/app/pages/work/work-overview-page.scss
+++ b/app/pages/work/work-overview-page.scss
@@ -39,7 +39,7 @@
 
 				.blip {
 					flex: 0 $blipSize;
-					padding-top: 4px;
+					align-self: center;
 					padding-right: $blipPadding;
 
 					@include blipElement($blipSize);
